# SingleSpin

./: CMakeLists.txt  CMakeLists.txt~  MCSpin_simple.cc  README  README~  Sigmae.txt~
include/: constants.hh  myTGraph.hh  site.hh
src/: constants.cc  myTGraph.cc  site.cc
